	- implemented comparison report (checks "exitcode", "stderr" and "png_crc")
	- fixed crash when invalid configuration was specified
	- added option "print_stdout" to add stdout data to report
	- made it possible to simply use "print_stdout" and "print_stderr"
	- added "stdout_file" and "stderr_file" to default configuration to match old reports
	- always print all available data in normal mode
	- stdout was not printed was not added to report if stderr was missing
	- added support for dipswitches
	- fixed some memory leaks
	- added support for configurations
	- added hard-coded reporting of "called within reset scope by" for now
	- fixed formating of output when no stderr exists

0.70
	- read "mameconfig" version from listxml when available
	- report error in case of unsupported "mameconfig" version
	- fixed return value of create_cfg() in case of success
	- do not process any entries when "xpath_expr" is invalid
	- added a few more XPath error messages
	- fixed memory leak in create_cfg() when creating a .cfg file
	- merged redundant dipswitch/configuration parsing code into parse_listxml_element_cfg()
	- added enum cfg_type for .cfg entry type parameter
	- added option "use_softwarelist" to control usage of software lists
	- renamed the output file postfix for device file entries from "dev" to "sfw" (software)
	- made process ID code working with Visual Studio
	- added warning when "use_softwarelist" is set, but "hashpath" isn't
	- renamed device_type to device_briefname
	
0.71
	- fixed compilation with USE_VALGRIND set to 1
	- fixed resource leak when parsing MNGs without MHDR (reported by cppcheck)
	- replaced some unecessary strlen() calls reported by cppcheck
	- added missing static to clear_directory_nosnap()
	- simplified append_string()
	- avoid Visual Studio warnings about constant expressions

0.72
	- do not write "autosave" flag to output XML when "use_autosave" is not set to 1